# threeChess

./: CMakeLists.txt  README.md  main.cpp
EasyX/Include/: easyx.h  graphics.h
EasyX/lib/VC2015/x86/: EasyXa.lib  EasyXw.lib
X/: readme.txt
